build the footer. optimize script loading. fix the problem with lazy-images (was overflowing).

--- a/index.scss
+++ b/index.scss
@@ -130,7 +130,8 @@ img {
 }
 
 .img--lazy {
-  transform: scale(2.25);
+  // transform: scale(1.5);
+  zoom: 2;
   filter: blur(15px);
 }
 
@@ -501,6 +502,9 @@ img {
   position: absolute;
   top: 2rem;
   visibility: hidden;
+  height: 20rem;
+  max-height: 30rem;
+  overflow-y: scroll;
 }
 
 .operation__content--active {
@@ -515,14 +519,15 @@ img {
 .testimonials__content {
   position: relative;
   overflow: hidden;
-  height: 80rem;
+  height: 37.5rem;
+  overflow-y: scroll;
+  max-height: 75rem;
 }
 
 .slide {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 80rem;
   transition: transform 1s;
 }
 
@@ -588,11 +593,8 @@ img {
   @include media-min-width(map-get($break-points, tablet)) {
     display: flex;
     position: absolute;
-    top: 50%;
+    top: 90%;
     left: 50%;
-  }
-  @include media-min-width(950px) {
-    top: 45%;
   }
 }
 
@@ -608,4 +610,52 @@ img {
 
 .dot--active {
   background-color: #888;
+}
+
+//footer
+.footer {
+  background-color: #37383d;
+  color: #fff;
+  text-align: center;
+  padding: 7.5rem 5rem;
+  & > button {
+    margin: 3.75rem auto 7.5rem;
+    font-size: 1.75rem;
+    padding: 1.25rem 1.75rem;
+    @include media-min-width(map-get($break-points, tablet)) {
+      font-size: 2.25rem;
+    }
+  }
+}
+
+.footer__header {
+  line-height: 1.8;
+  font-size: 2.5rem;
+  @include media-min-width(map-get($break-points, tablet)) {
+    font-size: 3.25rem;
+  }
+}
+
+.footer__links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  @include media-min-width(map-get($break-points, tablet)) {
+    flex-direction: row;
+  }
+}
+
+.footer__link {
+  color: #fff;
+  margin: 1rem;
+  font-size: 2rem;
+  transition: all 0.3s;
+  &:hover {
+    color: map-get($map: $colors, $key: primary);
+  }
+  @include media-min-width(map-get($break-points, tablet)) {
+    font-size: 2 rem;
+    margin: 2rem;
+  }
 }
